# nequip-eqx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
configs/: 3bpa.yml
nequip_eqx/: __init__.py  calculator.py  data.py  model.py  test.py  train.py
tests/: test_model.py
